--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".register"></activity>
+        <activity android:name=".menu"></activity>
+        <activity android:name=".register" />
         <activity android:name=".login" />
         <activity android:name=".home" />
         <activity android:name=".MainActivity">
