--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+   // implementation 'com.androidx.appcompat.app.AppCompatActivity;'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-database:10.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.firebase:firebase-auth:9.2.1'
+    implementation 'com.google.firebase:firebase-auth:10.2.1'
     implementation 'com.google.android.gms:play-services-gcm:10.2.1'
 }
 apply plugin: 'com.android.application'
@@ -38,7 +39,7 @@ android {
     // ...
 }
 
-// Add the following line to the bottom of the file:
-apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+
+apply plugin: 'com.google.gms.google-services'
 
 com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
