--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,20 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/acciden"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/acciden"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".menu"></activity>
+        <activity android:name=".report2"></activity>
+        <activity android:name=".policy" />
+        <activity android:name=".report" />
+        <activity android:name=".menu" />
         <activity android:name=".register" />
         <activity android:name=".login" />
         <activity android:name=".home" />
